# numerical-analysis

./: .gitignore  9-1-1.c  README.md  check_significant_digits.c  q911.m  quad_test.c
1/: 9_1_1.c  check_significant_digits.c  quad_test.c
10/: analysis_diagssor_opt.py  analysis_ichol_opt.py  pyproject.toml
13/: main.py
13/notebooks/: condition_number.ipynb  prec_unknown.ipynb
13/plots/: __init__.py  convergence_rate_by_config.py
14/: AGENTS.md  pyproject.toml
14/plots/: convergence_rate_by_config.py  convergence_rate_by_config_and_cond.py  convergence_vs_condition.py  iteration.py  normalized_iterations_by_config_and_cond.py
14/utils/: detect_preconditioner_columns.py
15/: main.py  run_all_plots.sh
15/notebooks/: check_diag_matix.ipynb  check_few_iters_matrix.ipynb  check_none_converged.ipynb  condition_number.ipynb  prec_unknown.ipynb  results.filtered.csv  runs.csv
15/plots/: condition_distribution.py  convergence_rate_by_config.py  convergence_rate_by_config_and_cond.py  convergence_vs_condition.py  normalized_iterations_by_config_and_cond.py  normalized_iterations_by_config_and_cond_converged_only.py  normalized_iterations_by_config_and_cond_converged_only_violin.py  normalized_iterations_by_config_and_cond_violin.py
15/utils/: condition_numbers.py
3/: newton_secant_demo.m
5/: compare_pp.m  is_spd.m  solve_hilbert_matrix.m  solve_hilbert_matrix_small_error.m  solve_matrix.m
6/: choleskyDecomposition.m  choleskyMethod.m  modifiedCholeskyDecomposition.m  modifiedCholeskyMethod.m  testCholeskyDecomposition.m  testCholeskyWithMatrixData.m  testHilbertCholesky.m
6/inputs/: README.md
8/: eg9_3_4.m  eg9_3_5.m  my_ichol.m  my_ichol.md  my_ichol_spdiags.m  my_ichol_vec.m  my_ichol_vec2.m  test_cg.m  test_diag_pcg.m  test_ic_pcg.m  test_ssor_pcg.m
8/+utils/: build_preconditioner.m  cg_method.m  imcompleteCholeskyDecomposition.m  incompleteCholeskyDecomposition.m  package.md  pcg_method.m  plot_conv_hist.m
9/high-precision/: CMakeLists.txt  Dockerfile
9/high-precision/include/algorithms/: conjugate_gradient.hpp
9/high-precision/include/bailey/: bailey_blas.hpp  dd_arithmetic.hpp  dq_arithmetic.hpp  precision_traits.hpp  quad_double.hpp
9/high-precision/include/io/: matrix_market.hpp
9/high-precision/include/linear_algebra/: conjugate_gradient.hpp
9/high-precision/include/matrix_io/: matrix_market.hpp
9/high-precision/interfaces/bailey_wrappers/: ddfun_cwrap.f90  dqfun_cwrap.f90  qxfun_cwrap.f90
9/high-precision/src/: cg_solver.cpp
9/preconditioning/: exp_cmp_preconditioner.m  pyproject.toml  results_exp_cmp_preconditioner.py
9/preconditioning/+krylov/: build_preconditioner.m  pcg_method.m
9/preconditioning/+utils/: cg_method.m  eg9_3_4_getMatrix.m  expand_results_table.m  incompleteCholeskyDecomposition.m  plot_conv_hist.m  prec_config2str.m  print_num_results.m
9/preconditioning/outputs/exp_cmp_preconditioner/: results_expanded.csv
